k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attendance-db
  namespace: attendance-system
spec:
  type: ClusterIP
  selector:
    app: attendance-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
